# LEADER

./: .dockerignore  .gitignore  ARCHITECTURE.md  BACKENDS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCTION_READY.md  README.md  RELEASE.md  SECURITY.md  demo.py  demo_extended.py  docker-compose.adapters.yml  docker-compose.yml  litellm-config.yaml  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
bridges/: agent_bridge.py
leader/: __init__.py  auditor.py  cli.py  config.py  conftest.py  direct_llm.py  exceptions.py  executor.py  file_utils.py  logger.py  middleware.py  models.py  py.typed  registry.py  router.py  sdk.py  server.py  setup_helper.py  test_auditor.py  test_file_utils.py  test_integration.py  test_integration_adapters.py  test_leader.py  test_router_semantic.py
leader/adapters/: __init__.py  agentgpt.py  autogen.py  autogpt.py  azureopenai.py  babyagi.py  base.py  bedrock.py  crewai.py  direct_llm.py  generic_rest.py  griptape.py  hermes.py  huggingface.py  langchain.py  litellm.py  llamaindex.py  make.py  mem0.py  metagpt.py  mlflow.py  n8n.py  openclaw.py  replicate.py  reworkdai.py  semantickernel.py  stabilityai.py  taskweaver.py  vertexai.py  zapier.py  zeroclaw.py
leader/plugins/: __init__.py  base.py  openclaw_plugin.py  vscode.py  webhook.py
